--- a/rp/css1/ui-component.css
+++ b/rp/css1/ui-component.css
@@ -139,6 +139,60 @@
 	height: 414px;
 	position:relative;
 }
-
+.ui-slider-wrap{
+	width:9999px;
+	height: 414px;
+	position:absolute;
+	left:0;
+	top:0;
+}
+.ui-slider-wrap .item{
+	display: block;
+	width:544px;
+	height: 414px;
+	float:left;
+}
+.ui-slider-arrow{
+	position:relative;
+	width:544px;
+	height:40px;
+	top:50%;
+	left:0;
+	margin-top: -20px;
+}
+.ui-slider-arrow .item{
+	display: block;
+	width: 40px;
+	height: 40px;
+	background: url(../img/ui-slider-arrow.png) no-repeat;
+	position: absolute;
+	top:0;
+}
+.ui-slider-arrow .left{
+	background-position: 0 0 ;
+	left: 0;
+}
+.ui-slider-arrow .right{
+	background-position: -40px 0 ;
+	right: 0;
+}
+.ui-slider-process{
+	position:absolute;
+	width:544px;
+	height: 12px;
+	text-align:center;
+	left:0;
+	bottom:20px;
+}
+.ui-slider-process .item{
+	display:inline-block;
+	width: 16px;
+	height: 16px;
+	background:url(../img/ui-slider-process.png) no-repeat;
+	background-position: 0 0 ;
+}
+.ui-slider-process .item_focus{
+	background-position: -23px 0 ;
+}
 
 
