--- a/mmall-fe/src/view/index.html
+++ b/mmall-fe/src/view/index.html
@@ -1,7 +1,11 @@
 <html lang="en">
-    <%= require('html-loader!./layout/html-head.html')%>
+    <head>
+        <%= require('html-loader!./layout/head-common.html')%>
+        <title>happymall电商平台</title>
+    </head>
      <body>
-     hello123
-        <script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+        <%= require('html-loader!./layout/nav.html')%>
+        <%= require('html-loader!./layout/header.html')%>
+        <%= require('html-loader!./layout/footer.html')%>
      </body>
 </html>
