--- a/rpextend/css/base.css
+++ b/rpextend/css/base.css
@@ -4,7 +4,7 @@
     width: 100%;
     background-color: #fff;
     z-index: 1000;
-    box-shadow:0 0 9px 0 #ddd; //顶部阴影
+    box-shadow:0 0 9px 0 #ddd;
 }
 .header-logo{
     display: block;
@@ -24,7 +24,7 @@
 }
 .header-content{
     float:left;
-    margin-left: 40px;
+    margin-left: 100px;
 }
 .header-search{
     float:left;
@@ -80,11 +80,40 @@
     height: 348px;
     background: url("../img/webNotice.png") center no-repeat;
 }
-.import-ad span{
+.import-ad .title ,.import-ad .info-header{
     display: block;
     padding: 80px 10px 0 36px;
     font-size: 14px;
     color: #7f7f7f;
+}
+.import-ad .info-header{
+    padding: 5px 10px 0 60px;
+    color:red;
+}
+.import-ad .info-content{
+    width:154px;
+    height: 96px;
+    font-size: 12px;
+    padding: 0 0 20px 30px;
+    color: #f65f5f;
+}
+.import-ad .info-content a{
+    color: #f65f5f;
+}
+.import-ad .line{
+    padding-left: 30px;
+    color: #f65f5f;
+}
+.import-ad-footer{
+    width: 150px;
+    height: 60px;
+    padding-left:30px;
+    font-size: 13px;
+    text-align: center;
+    color:#7f7f7f;
+}
+.import-ad-footer .notice{
+    padding-bottom: 5px;
 }
 .close{
     position:fixed;
@@ -108,17 +137,55 @@
     height: 40px;
     line-height: 10px;
 }
-.ul-item li{
-    display: inline-block;
+.ul-item p{
     float:left;
-    padding: 0 50px;
     font-size: 14px;
     color:#666;
+    width: 190px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    cursor: pointer;
 }
-.banner-item {
+.ul-item .active{
+    background-color:#def3ff;
+}
+.banner {
     padding-top: 124px;
 }
 .banner-box{
     height: 1000px;
-    border:1px solid red;
+}
+.banner-nav{
+    float:left;
+    width: 190px;
+    height: 425px;
+    background-color: #00B3EA;
+}
+.banner-shuff{
+    float:right;
+    width: 820px;
+    height: 425px;
+    background-color: #00B3EA;
+}
+.footer{
+    width: 100%;
+    height: 50px;
+    background-color:#fafafa;
+    line-height: 50px;
+    font-size: 13px;
+}
+.footer .info{
+    color: #aaa;
+    padding:0 60px 0 10px ;
+}
+.footer .phone{
+    color:#666;
+}
+.service{
+    float : right;
+}
+.service a{
+    margin-left: 20px;
+    color: #666;
 }
